Upgrade to java version 17
Fix minor deprecation warnings.

Remove MacOS bug fix for issue resolved in Java version 13, which was
now causing problems on MacOS with JCheckBoxMenuItem.